# BetaGPU

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/beta_cuda/: BetaDistCuda.hpp  GPU_Array.hpp  beta_cuda.hpp
scripts/ft3/exec/: exec-ft3-a100-cuda-big.sh  exec-ft3-a100-cuda.sh  exec-ft3-a100-general.sh  exec-ft3-a100-omp.sh  exec-ft3-a100-seq.sh  exec-ft3-a100.sh  exec-once-ft3-a100-cuda.sh  exec-once-ft3-a100-seq-sorted.sh  exec-once-ft3-a100-seq.sh  exec-once-ft3-t4-cdf-cuda.sh  exec-once-ft3-t4-cdf-seq.sh  ft3-a100-alphaBeta.sh
scripts/ft3/profiling/: profile-a100.sh  profile-ft3-a100.sh
scripts/parsing/: Parsing_documentation.md  cf_iters_to_graph.py  first_steps.Rmd  gnuplot.template  gnuplot_cont_frac_iterations.template  gnuplot_pinned.template  omp_only.template  omp_output_to_dat.py  parseCancerLocatorAlphaBetas.ipynb  raw_output_to_dat.py  t.ipynb  test_bindings.ipynb
src/: main.cpp  main_cu.cpp  main_gsl.cpp  test.cpp
src/BetaGPU/: DESCRIPTION  NAMESPACE
src/BetaGPU/R/: RcppExports.R
src/BetaGPU/man/: BetaGPU-package.Rd
src/BetaGPU/src/: RcppExports.cpp
src/profiling_tests/: bench.cu  benchmark_cont_frac.cpp  benchmark_test.cpp
src/pybindings/: BetaDistCuda.cpp
src/src_cuda/: BetaDistCuda.cu  BetaDistCuda.hpp  GPU_Array.cu
src/src_ref/: BetaDistGsl.cpp  BetaDistGsl.hpp
